<resources>
    <string name="app_name">Engineering Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Open">open</string>
    <string name="menu_close">close</string>
    <string name="final_year">Final Year</string>
    <string name="third_year">Third Year</string>
    <string name="second_year">Second Year</string>
    <string name="first_year">First Year</string>
    <string name="settings">Settings</string>
    <string name="review">Review</string>
    <string name="submit_notes">Submit Notes</string>
    <string name="select_year">Select Year</string>
    <string name="saved_notes">Saved Notes</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="_11_march_18_59">11 March 18:59</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>