<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/first_year"
            android:id="@+id/nav_FE"
            android:icon="@drawable/ic_baseline_looks_one_24"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/second_year"
            android:id="@+id/nav_SE"
            android:icon="@drawable/ic_baseline_looks_two_24"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:title="@string/third_year"
            android:id="@+id/nav_TE"
            android:icon="@drawable/ic_baseline_looks_3_24"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/final_year"
            android:id="@+id/nav_BE"
            android:icon="@drawable/ic_baseline_looks_4_24"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:title=" "
            android:layout_height="wrap_content"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/saved_notes"
            android:title="@string/saved_notes"
            android:icon="@drawable/ic_round_archive_24"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_round_settings_24"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_submit"
            android:title="@string/submit_notes"
            android:icon="@drawable/ic_round_arrow_upward_24"/>
    </group>
</menu>