<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dialog_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/radio_active" />

    <LinearLayout
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/real"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/year_one"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_looks_one_24"
                app:tint="@color/radio_active"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/first_year"
                android:textColor="@color/radio_active"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_two"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_looks_two_24"
                app:tint="@color/radio_active"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/second_year"
                android:textColor="@color/radio_active"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_three"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_looks_3_24"
                app:tint="@color/radio_active"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/third_year"
                android:textColor="@color/radio_active"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_four"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_looks_4_24"
                app:tint="@color/radio_active"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/final_year"
                android:textColor="@color/radio_active"
                android:textSize="25sp" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_here"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_round_arrow_upward_24"
                app:tint="@color/radio_active" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/submit_notes"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/radio_active"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/real"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/radio_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years">

        <Button
            android:id="@+id/saved_notes"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_round_archive_24"
            android:backgroundTint="@color/radio_inactive" />

        <Button
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_round_settings_24"
            android:backgroundTint="@color/radio_inactive" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>